@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.42 2005-05-28 16:06:44 achu Exp $
+## $Id: Makefile.am,v 1.43 2005-06-10 16:28:20 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -8,7 +8,6 @@ noinst_HEADERS = cerebrod.h \
 		 cerebrod_clusterlist.h \
 		 cerebrod_config.h \
                  cerebrod_daemon.h \
-		 cerebrod_data.h \
 		 cerebrod_heartbeat.h \
 		 cerebrod_listener.h \
 		 cerebrod_metric.h \
@@ -25,7 +24,6 @@ cerebrod_SOURCES = cerebrod.c \
 		   cerebrod_clusterlist.c \
 		   cerebrod_config.c \
                    cerebrod_daemon.c \
-		   cerebrod_data.c \
 		   cerebrod_heartbeat.c \
 		   cerebrod_listener.c \
 		   cerebrod_metric.c \
