@@ -1,3 +1,7 @@
+2005-06-10  Albert Chu  <chu11@llnl.gov>
+
+	* Various code cleanup and documentation cleanup.
+
 2005-06-09  Albert Chu  <chu11@llnl.gov>
 
 	* Added support for CEREBRO_METRIC_FLAGS_NONE_IF_DOWN flag.
